# rust-fractx

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: fractal_test.rs
src/: buffer.rs  color.rs  fractal.rs  img.rs  iter.rs  lib.rs  main.rs  multi.rs  parallel.rs
